Fix alignment of user info and console picker in masthead.

--- a/frontend/public/components/_openshift-masthead.scss
+++ b/frontend/public/components/_openshift-masthead.scss
@@ -7,6 +7,7 @@
   background-color: $color-pf-black;
   color: $color-os-nav-title;
   flex: 1 1 auto;
+  align-items: center;
 }
 
 .os-header__console-picker {
